--- a/public/chat-home-page.css
+++ b/public/chat-home-page.css
@@ -236,6 +236,17 @@ a {
     }
 }
 
+.msg-name {
+    font-size: 1.1rem !important;
+    text-align: end;
+    margin: 0px 3px 17px !important;
+}
+.msg-name-left {
+    text-align: start;
+}
+.msg-name-right {
+    text-align: right;
+}
 .msg time {
     font-size: 0.7rem;
     color: #ccc;
@@ -391,3 +402,116 @@ input.textarea {
 .emojis:active {
     opacity: 0.9;
 }
+
+/*
+Modal autentification
+ */
+
+
+.overlay {
+    background: black;
+    opacity: 0.8;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 101;
+}
+
+.modal {
+    visibility: visible;
+}
+
+.modal__contents {
+    background: white;
+    width: 430px;
+    position: absolute;
+    left: 50%;
+    margin-left: -16rem;
+    min-height: 26rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.modal__close {
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    text-decoration: none;
+    display: none;
+}
+.modal-title {
+    font-size: 26px;
+    color: #868383;
+    padding: 9px;
+    margin: 14px 10px 0;
+}
+.modal-input {
+    border: 1px solid lightgrey;
+    color: lightslategrey;
+    padding: 13px;
+    margin-top: 16px;
+    width: 305px;
+    font-size: 23px;
+}
+.modal--show {
+    display: none;
+}
+
+.modal--transition {
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+    z-index: 101;
+}
+
+.modal--show .modal--transition {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+}
+.form-submit-btn {
+    background: none;
+    border: 1px solid lightgrey;
+    width: 100px;
+    padding: 10px;
+    font-size: 20px;
+    margin-top: 17px;
+}
+.form-submit-btn:active, .form-submit-btn:hover {
+    background: lightgrey;
+    box-shadow: 0 0 0 0.4px;
+    outline: none;
+}
+/*
+@media (max-width : 48rem) {
+
+    .modal__contents {
+        top: 0;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        margin: 0;
+    }
+
+    .modal__close {
+        display: block;
+    }
+
+    .modal--transition {
+        -webkit-transform: translateX(-0) translateY(150%);
+        -moz-transform: translateX(-0) translateY(150%);
+        -ms-transform: translateX(-0) translateY(150%);
+        transform: translateX(-0) translateY(150%);
+    }
+
+}
+*/
